# morsel

./: CMakeLists.txt  package.xml  setup.py
detector/: bitefinder.py  biteserver.py  bitetest.py  gen_plate.json  gen_plate_mask.py  save_images.json  softkinetic_settings.json  structureio_settings.json
viewer/: bite_visualization_test4.html
viewer/js/: clickmanager.js  orbitline.js  orbitrotate.js
viewer/lib/: ColladaLoader.js  sketch.js
